# test_task_fastapi

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: routes.py
src/broker/: hadlers.py  handlers.py  utils.py
src/celery/: tasks.py
src/celery_/: tasks.py
src/common/: application.py  bootstrap.py  config.py  container.py  redis.py
src/migrations/: env.py
src/migrations/versions/: 001_init.py
src/models/: base.py  order.py  user.py
src/repositories/: db.py  repositories.py
src/schemas/: order.py  user.py
src/schemas/enums/: order.py
src/services/: auth.py  order.py  user.py
src/services/utils/: auth.py  cache.py
