[project]
name = "test-task-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Khadkevich",email = "glambary@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
isort = "^6.0.1"
pre-commit = "^4.1.0"

